--- a/package.json
+++ b/package.json
@@ -17,21 +17,13 @@
   },
   "homepage": "https://github.com/eden-js/core#readme",
   "dependencies": {
-    "babelify": "^10.0.0",
-    "browserify": "^16.2.3",
-    "dot-prop-immutable": "^1.5.0",
-    "fs-extra": "^7.0.0",
-    "glob-all": "^3.1.0",
-    "gulp": "^3.9.1",
-    "gulp-header": "^2.0.5",
-    "gulp-sourcemaps": "^2.6.4",
-    "gulp-uglify-es": "^1.0.4",
-    "os": "^0.1.1",
-    "path": "^0.12.7",
-    "through2": "^2.0.3",
-    "uuid": "^3.3.2",
-    "vinyl-buffer": "^1.0.1",
-    "vinyl-source-stream": "^2.0.0",
+    "@babel/core": "^7.1.2",
+    "@babel/plugin-transform-async-to-generator": "^7.1.0",
+    "@babel/plugin-transform-classes": "^7.1.0",
+    "@babel/plugin-transform-runtime": "^7.1.0",
+    "@babel/polyfill": "^7.0.0",
+    "@babel/preset-env": "^7.1.0",
+    "@babel/runtime": "^7.1.2",
     "@edenjs/admin": "^1.0.1",
     "@edenjs/alert": "^1.0.1",
     "@edenjs/asset": "^1.0.0",
@@ -46,6 +38,23 @@
     "@edenjs/router": "^1.0.0",
     "@edenjs/serviceworker": "^1.0.1",
     "@edenjs/socket": "^1.0.0",
-    "@edenjs/user": "^1.0.1"
+    "@edenjs/user": "^1.0.1",
+    "babel-plugin-array-includes": "^2.0.3",
+    "babelify": "^10.0.0",
+    "browserify": "^16.2.3",
+    "dot-prop-immutable": "^1.5.0",
+    "fs-extra": "^7.0.0",
+    "glob-all": "^3.1.0",
+    "gulp": "^3.9.1",
+    "gulp-header": "^2.0.5",
+    "gulp-sourcemaps": "^2.6.4",
+    "gulp-uglify-es": "^1.0.4",
+    "node-sass-tilde-importer": "^1.0.2",
+    "os": "^0.1.1",
+    "path": "^0.12.7",
+    "through2": "^2.0.3",
+    "uuid": "^3.3.2",
+    "vinyl-buffer": "^1.0.1",
+    "vinyl-source-stream": "^2.0.0"
   }
 }
