--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@edenjs/core",
-  "version": "1.0.4",
+  "version": "1.0.5",
   "description": "",
   "main": "index.js",
   "scripts": {
@@ -46,6 +46,7 @@
     "fs-extra": "^7.0.0",
     "glob-all": "^3.1.0",
     "gulp": "^3.9.1",
+    "gulp-autoprefixer": "^6.0.0",
     "gulp-header": "^2.0.5",
     "gulp-sass": "^4.0.2",
     "gulp-sourcemaps": "^2.6.4",
