--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@edenjs/core",
-  "version": "1.0.5",
+  "version": "1.0.6",
   "description": "",
   "main": "index.js",
   "scripts": {
@@ -51,6 +51,7 @@
     "gulp-sass": "^4.0.2",
     "gulp-sourcemaps": "^2.6.4",
     "gulp-uglify-es": "^1.0.4",
+    "node-sass-tilde-importer": "^1.0.2",
     "os": "^0.1.1",
     "path": "^0.12.7",
     "through2": "^2.0.3",
