--- a/package.json
+++ b/package.json
@@ -44,7 +44,7 @@
     "browserify": "^16.2.3",
     "dot-prop-immutable": "^1.5.0",
     "fs-extra": "^7.0.1",
-    "glob-all": "^3.1.0",
+    "globby": "^8.0.1",
     "gulp": "^4.0.0",
     "gulp-autoprefixer": "^6.0.0",
     "gulp-header": "^2.0.5",
