--- a/package.json
+++ b/package.json
@@ -42,6 +42,7 @@
     "babel-plugin-array-includes": "^2.0.3",
     "babelify": "^10.0.0",
     "browserify": "^16.2.3",
+    "deepmerge": "^3.0.0",
     "dot-prop-immutable": "^1.5.0",
     "fs-extra": "^7.0.1",
     "globby": "^8.0.1",
