more updates and patches

--- a/package.json
+++ b/package.json
@@ -21,14 +21,14 @@
     "@babel/plugin-transform-async-to-generator": "^7.2.0",
     "@babel/plugin-transform-classes": "^7.2.2",
     "@babel/plugin-transform-runtime": "^7.2.0",
-    "@babel/polyfill": "^7.0.0",
-    "@babel/preset-env": "^7.2.0",
+    "@babel/polyfill": "^7.2.5",
+    "@babel/preset-env": "^7.2.3",
     "@babel/runtime": "^7.2.0",
     "@edenjs/admin": "^1.1.1",
     "@edenjs/alert": "^1.0.1",
     "@edenjs/asset": "^2.0.3",
     "@edenjs/cache": "^1.0.0",
-    "@edenjs/cms": "^1.1.11",
+    "@edenjs/cms": "^1.1.16",
     "@edenjs/email": "^1.0.0",
     "@edenjs/grid": "^1.0.10",
     "@edenjs/locale": "^2.0.1",
@@ -48,7 +48,8 @@
     "globby": "^8.0.1",
     "gulp": "^4.0.0",
     "gulp-autoprefixer": "^6.0.0",
-    "gulp-header": "^2.0.5",
+    "gulp-header": "^2.0.7",
+    "gulp-rename": "^1.4.0",
     "gulp-sass": "^4.0.2",
     "gulp-sourcemaps": "^2.6.4",
     "gulp-uglify-es": "^1.0.4",
