Rework building, fix import issue with javascript

--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@edenjs/core",
-  "version": "2.0.17",
+  "version": "2.0.18",
   "description": "",
   "main": "index.js",
   "scripts": {
@@ -30,6 +30,7 @@
     "@edenjs/cache": "^1.0.0",
     "@edenjs/cms": "^1.1.16",
     "@edenjs/email": "^1.0.0",
+    "@edenjs/glob": "^1.0.0",
     "@edenjs/grid": "^1.0.10",
     "@edenjs/locale": "^2.0.4",
     "@edenjs/menu": "^1.0.11",
@@ -39,29 +40,26 @@
     "@edenjs/serviceworker": "^2.0.3",
     "@edenjs/socket": "^1.0.2",
     "@edenjs/user": "^1.0.15",
-    "babel-plugin-array-includes": "^2.0.3",
     "babelify": "^10.0.0",
     "bootstrap": "^4.2.1",
     "browserify": "^16.2.3",
     "deepmerge": "^3.0.0",
     "dot-prop-immutable": "^1.5.0",
     "fs-extra": "^7.0.1",
-    "globby": "^8.0.1",
     "gulp": "^4.0.0",
     "gulp-autoprefixer": "^6.0.0",
     "gulp-header": "^2.0.7",
     "gulp-rename": "^1.4.0",
     "gulp-sass": "^4.0.2",
     "gulp-sourcemaps": "^2.6.4",
-    "gulp-uglify-es": "^1.0.4",
+    "gulp-terser": "^1.1.7",
     "jquery": "^3.3.1",
-    "os": "^0.1.1",
-    "path": "^0.12.7",
     "popper.js": "^1.14.6",
     "through2": "^3.0.0",
     "uuid": "^3.3.2",
     "vinyl-buffer": "^1.0.1",
     "vinyl-source-stream": "^2.0.0",
+    "watchify": "^3.11.0",
     "whatwg-fetch": "^3.0.0"
   },
   "devDependencies": {
