--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "@edenjs/core",
   "description": "",
-  "version": "2.1.6",
+  "version": "2.1.7",
   "dependencies": {
     "@edenjs/admin": "^1.2.5",
     "@edenjs/alert": "^1.0.2",
@@ -9,6 +9,7 @@
     "@edenjs/cache": "^1.0.0",
     "@edenjs/cms": "^1.1.37",
     "@edenjs/email": "^1.0.0",
+    "@edenjs/form": "0.0.3",
     "@edenjs/glob": "^1.0.0",
     "@edenjs/grid": "^1.0.10",
     "@edenjs/locale": "^2.0.6",
