--- a/package.json
+++ b/package.json
@@ -9,9 +9,7 @@
     "@edenjs/cache": "^1.0.0",
     "@edenjs/cms": "^1.1.37",
     "@edenjs/email": "^1.0.0",
-    "@edenjs/form": "0.0.3",
     "@edenjs/glob": "^1.0.0",
-    "@edenjs/grid": "^1.0.10",
     "@edenjs/locale": "^2.0.6",
     "@edenjs/menu": "^1.0.11",
     "@edenjs/meta": "^1.0.0",
@@ -19,8 +17,6 @@
     "@edenjs/router": "^1.0.3",
     "@edenjs/serviceworker": "^2.0.13",
     "@edenjs/socket": "^1.0.3",
-    "@edenjs/user": "^1.0.16",
-    "bootstrap": "^4.3.0",
     "dot-prop": "^4.2.0",
     "jquery": "^3.3.1",
     "popper.js": "^1.14.7",
@@ -46,10 +42,16 @@
   "homepage": "https://github.com/eden-js/core#readme",
   "devDependencies": {
     "@edenjs/eslint-config-eden": "^2.0.14",
+    "@edenjs/form": "0.0.6",
+    "@edenjs/grid": "^1.0.12",
+    "@edenjs/user": "^1.0.28",
+    "bootstrap": "^4.3.1",
     "eslint": "^5.13.0",
     "eslint-config-airbnb": "^17.1.0",
     "eslint-plugin-import": "^2.16.0",
-    "eslint-plugin-jsx-a11y": "^6.2.0",
-    "eslint-plugin-react": "^7.12.4"
+    "eslint-plugin-jsx-a11y": "^6.2.1",
+    "eslint-plugin-react": "^7.12.4",
+    "install": "^0.12.2",
+    "npm": "^6.8.0"
   }
 }
