--- a/package.json
+++ b/package.json
@@ -1,25 +1,25 @@
 {
   "name": "@edenjs/core",
   "description": "",
-  "version": "2.2.0",
+  "version": "2.2.1",
   "dependencies": {
-    "@edenjs/admin": "^1.2.5",
+    "@edenjs/admin": "^1.2.7",
     "@edenjs/alert": "^1.0.2",
     "@edenjs/asset": "^2.0.4",
     "@edenjs/cache": "^1.0.0",
-    "@edenjs/cms": "^1.1.37",
+    "@edenjs/cms": "^1.1.40",
     "@edenjs/email": "^1.0.0",
-    "@edenjs/form": "0.0.6",
+    "@edenjs/form": "^0.0.6",
     "@edenjs/glob": "^1.0.0",
-    "@edenjs/grid": "^1.0.12",
-    "@edenjs/locale": "^2.0.6",
+    "@edenjs/grid": "^1.0.13",
+    "@edenjs/locale": "^2.0.8",
     "@edenjs/menu": "^1.0.11",
     "@edenjs/meta": "^1.0.0",
     "@edenjs/riot": "^2.0.7",
     "@edenjs/router": "^1.0.3",
     "@edenjs/serviceworker": "^2.0.13",
     "@edenjs/socket": "^1.0.3",
-    "@edenjs/user": "^1.0.28",
+    "@edenjs/user": "^1.0.30",
     "bootstrap": "^4.3.1",
     "dot-prop": "^4.2.0",
     "jquery": "^3.3.1",
@@ -46,7 +46,7 @@
   "homepage": "https://github.com/eden-js/core#readme",
   "devDependencies": {
     "@edenjs/eslint-config-eden": "^2.0.14",
-    "eslint": "^5.13.0",
+    "eslint": "^5.14.0",
     "eslint-config-airbnb": "^17.1.0",
     "eslint-plugin-import": "^2.16.0",
     "eslint-plugin-jsx-a11y": "^6.2.1",
