amend model listener, upgrade dependencies, bump version

--- a/package.json
+++ b/package.json
@@ -1,19 +1,19 @@
 {
   "name": "@edenjs/core",
   "description": "",
-  "version": "2.2.1",
+  "version": "2.2.2",
   "dependencies": {
-    "@edenjs/admin": "^1.2.7",
+    "@edenjs/admin": "^1.2.8",
     "@edenjs/alert": "^1.0.2",
     "@edenjs/asset": "^2.0.4",
     "@edenjs/cache": "^1.0.0",
-    "@edenjs/cms": "^1.1.40",
+    "@edenjs/cms": "^1.1.41",
     "@edenjs/email": "^1.0.0",
-    "@edenjs/form": "^0.0.6",
+    "@edenjs/form": "0.0.7",
     "@edenjs/glob": "^1.0.0",
-    "@edenjs/grid": "^1.0.13",
+    "@edenjs/grid": "^1.0.14",
     "@edenjs/locale": "^2.0.8",
-    "@edenjs/menu": "^1.0.11",
+    "@edenjs/menu": "^1.0.12",
     "@edenjs/meta": "^1.0.0",
     "@edenjs/riot": "^2.0.7",
     "@edenjs/router": "^1.0.3",
