--- a/package.json
+++ b/package.json
@@ -1,25 +1,25 @@
 {
   "name": "@edenjs/core",
   "description": "",
-  "version": "2.3.1",
+  "version": "2.4.0",
   "dependencies": {
     "@edenjs/admin": "^1.2.9",
     "@edenjs/alert": "^1.0.2",
     "@edenjs/asset": "^2.0.4",
     "@edenjs/cache": "^1.0.0",
-    "@edenjs/cms": "^1.1.41",
+    "@edenjs/cms": "^1.1.44",
     "@edenjs/email": "^1.0.0",
-    "@edenjs/form": "0.0.7",
+    "@edenjs/form": "^1.0.0",
     "@edenjs/glob": "^1.0.0",
     "@edenjs/grid": "^1.0.20",
     "@edenjs/locale": "^2.0.8",
-    "@edenjs/menu": "^1.0.12",
+    "@edenjs/menu": "^1.0.13",
     "@edenjs/meta": "^1.0.0",
     "@edenjs/riot": "^2.0.7",
     "@edenjs/router": "^2.0.1",
     "@edenjs/serviceworker": "^2.0.13",
     "@edenjs/socket": "^2.0.0",
-    "@edenjs/user": "^1.0.31",
+    "@edenjs/user": "^1.0.32",
     "bootstrap": "^4.3.1",
     "dot-prop": "^4.2.0",
     "jquery": "^3.3.1",
