--- a/package.json
+++ b/package.json
@@ -1,26 +1,27 @@
 {
-  "name": "@edenjs/core",
+  "name": "@ifactoryjs/core",
   "description": "",
   "version": "2.6.51",
   "dependencies": {
-    "@edenjs/admin": "^1.2.15",
-    "@edenjs/alert": "^1.0.2",
-    "@edenjs/asset": "^2.0.7",
-    "@edenjs/cache": "^1.0.0",
-    "@edenjs/cms": "^1.3.13",
-    "@edenjs/email": "^1.1.1",
-    "@edenjs/form": "^1.3.7",
-    "@edenjs/glob": "^1.0.0",
-    "@edenjs/grid": "^1.1.1",
-    "@edenjs/locale": "^2.0.11",
-    "@edenjs/menu": "^1.2.2",
-    "@edenjs/meta": "^1.0.0",
-    "@edenjs/pubsub-redis": "^1.2.2",
-    "@edenjs/riot": "^2.0.10",
-    "@edenjs/router": "^2.1.5",
-    "@edenjs/serviceworker": "^2.1.0",
-    "@edenjs/socket": "^2.3.2",
-    "@edenjs/user": "^1.1.1",
+    "@ifactoryjs/admin": "github:ifactorydigital/ifactoryjs_admin",
+    "@ifactoryjs/alert": "github:ifactorydigital/ifactoryjs_alert",
+    "@ifactoryjs/asset": "github:ifactorydigital/ifactoryjs_asset",
+    "@ifactoryjs/cache": "github:ifactorydigital/ifactoryjs_cache",
+    "@ifactoryjs/cms": "github:ifactorydigital/ifactoryjs_cms",
+    "@ifactoryjs/email": "github:ifactorydigital/ifactoryjs_email",
+    "@ifactoryjs/form": "github:ifactorydigital/ifactoryjs_form",
+    "@ifactoryjs/grid": "github:ifactorydigital/ifactoryjs_grid",
+    "@ifactoryjs/locale": "github:ifactorydigital/ifactoryjs_locale",
+    "@ifactoryjs/menu": "github:ifactorydigital/ifactoryjs_menu",
+    "@ifactoryjs/meta": "github:ifactorydigital/ifactoryjs_meta",
+    "@ifactoryjs/pubsub-redis": "github:ifactorydigital/ifactoryjs_pubsub-redis",
+    "@ifactoryjs/riot": "github:ifactorydigital/ifactoryjs_riot",
+    "@ifactoryjs/router": "github:ifactorydigital/ifactoryjs_router",
+    "@ifactoryjs/serviceworker": "github:ifactorydigital/ifactoryjs_serviceworker",
+    "@ifactoryjs/socket": "github:ifactorydigital/ifactoryjs_socket",
+    "@ifactoryjs/sync": "github:ifactorydigital/ifactoryjs_sync",
+    "@ifactoryjs/user": "github:ifactorydigital/ifactoryjs_user",
+    "@ifactoryjs/user-settings": "github:ifactorydigital/ifactoryjs_user-settings",
     "bootstrap": "^4.3.1",
     "dot-prop": "^5.1.0",
     "jquery": "^3.4.1",
@@ -37,14 +38,14 @@
   },
   "repository": {
     "type": "git",
-    "url": "git+https://github.com/eden-js/core.git"
+    "url": "git+https://github.com/ifactorydigital/ifactoryjs_core.git"
   },
   "author": "",
   "license": "ISC",
   "bugs": {
-    "url": "https://github.com/eden-js/core/issues"
+    "url": "https://github.com/ifactorydigital/ifactoryjs_core/issues"
   },
-  "homepage": "https://github.com/eden-js/core#readme",
+  "homepage": "https://github.com/ifactorydigital/ifactoryjs_core#readme",
   "devDependencies": {
     "@edenjs/eslint-config-eden": "^2.0.14",
     "eslint": "^5.16.0",
